--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Lab1</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <h1>Basic HTML</h1>
+    <p>Hello, my name is Muhammad and this website showcases basic HTML.</p>
+    <h2>Fun Facts About Me </h1>
+    <ul>
+        <li>I like to play basketball and ping pong</li>
+        <li>I like to go to the gym</li>
+        <li>I like to play games; some of them are Rust, Apex, and Valorant</li>    </ul>
 </body>
 </html>
