--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -11,7 +11,7 @@
 <body>
     <h1>Basic HTML</h1>
     <p>Hello, my name is Muhammad and this website showcases basic HTML.</p>
-    <h2>Fun Facts About Me </h1>
+    <h2>Fun Facts About Me</h2>
     <ul>
         <li>I like to play basketball and ping pong</li>
         <li>I like to go to the gym</li>
